@@ -1,3 +1,10 @@
+2014-04-16  Alan Modra  <amodra@gmail.com>
+
+	[BZ #16740]
+	[BZ #16619]
+	* sysdeps/ieee754/ldbl-128ibm/s_frexpl.c (__frexpl): Rewrite.
+	* math/libm-test.inc (frexp_test_data): Add tests.
+
 2014-04-06  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
 	[BZ #16815]
